--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ workflows:
       - aws-ecr/build-and-push-image:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          aws-session-token: AWS_SESSION_TOKEN
+          # aws-session-token: AWS_SESSION_TOKEN
           repo: "${AWS_ECR_REPO_NAME}"
           docker-login: false
           account-url: AWS_ECR_ACCOUNT_URL
@@ -66,7 +66,7 @@ workflows:
           account-url: AWS_ECR_ACCOUNT_URL
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          aws-session-token: AWS_SESSION_TOKEN
+          # aws-session-token: AWS_SESSION_TOKEN
           create-repo: false
           path: ./charts
           region: AWS_DEFAULT_REGION
