--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  aws-ecr: circleci/aws-ecr@7.3.0  # ✅ Use official CircleCI AWS ECR Orb
+  aws-ecr: orbies/aws-ecr@1.2.1
 
 jobs:
   install_helm_chart:
