--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ orbs:
 jobs:
   install_helm_chart:
     machine:
-      image: ubuntu-2204:current
+      image: default
     # docker:
     #   - image: cimg/python:3.6
     steps:
