--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,13 +72,12 @@ orbs:
 
 jobs:
   install_helm_chart:
-    machine:
-      image: ubuntu-2204:current
-      resource_class: medium
-    # docker:
-    #   - image: cimg/python:3.6
+    docker:
+      - image: cimg/python:3.6
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.7
       - run:
           name: Install awscli
           command: curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
