--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,11 +75,15 @@ version: 2.1
 orbs:
   aws-ecr: orbies/aws-ecr@1.2.1
 
+executors:
+  docker-executor:
+    docker:
+      - image: cimg/python:3.10.7
+    resource_class: medium  # ✅ Now resource_class is properly assign
+
 jobs:
   install_helm_chart:
-    docker:
-      - image: cimg/python:3.6
-    resource_class: medium
+    executor: docker-executor  # ✅ Using the defined executor
     steps:
       - checkout
       - setup_remote_docker:
@@ -129,20 +133,21 @@ workflows:
   build_and_push_image:
     jobs:
       - aws-ecr/build-and-push-image:
+          executor: docker-executor  # ✅ Using the defined executor
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           # aws-session-token: AWS_SESSION_TOKEN
-          resource_class: medium  # ✅ Explicitly setting resource class
           repo: "${AWS_ECR_REPO_NAME}"
           docker-login: false
           account-url: AWS_ECR_ACCOUNT_URL
           region: AWS_DEFAULT_REGION
           tag: "v1.0"
       - aws-ecr/push-helm-chart:
+          executor: docker-executor  # ✅ Using the defined executor
           account-url: AWS_ECR_ACCOUNT_URL
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          resource_class: medium  # ✅ Explicitly setting resource class
+          # resource_class: medium  # ✅ Explicitly setting resource class
           # aws-session-token: AWS_SESSION_TOKEN
           create-repo: false
           path: ./charts
